--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.84:3.6": "„Ist es wirklich wahr, Tissa, dass du mehrere Mönche darüber unterrichtet hast, ",
   "sn22.84:3.7": "dass dein Körper sich anfühlt wie betäubt … ",
   "sn22.84:3.8": "und dass du an den Lehren zweifelst?“ ",
-  "sn22.84:3.9": "„Ja, Herr.“ "
+  "sn22.84:3.9": "„Ja, Herr.“ ",
+  "sn22.84:3.10": "„Was denkst du, Tissa? "
 }
