Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.84:3.7": "dass dein Körper sich anfühlt wie betäubt … ",
   "sn22.84:3.8": "und dass du an den Lehren zweifelst?“ ",
   "sn22.84:3.9": "„Ja, Herr.“ ",
-  "sn22.84:3.10": "„Was denkst du, Tissa? "
+  "sn22.84:3.10": "„Was denkst du, Tissa? ",
+  "sn22.84:3.11": "Wenn man nicht frei ist von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Form, und diese Form verfällt und geht zugrunde, führt das zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis?“ "
 }
