--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.84:3.11": "Wenn man nicht frei ist von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Form, und diese Form verfällt und geht zugrunde, führt das zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis?“ ",
   "sn22.84:3.12": "„Ja, Herr.“ ",
   "sn22.84:4.1": "„Gut, gut, Tissa! ",
-  "sn22.84:4.2": "So, Tissa, ist es, "
+  "sn22.84:4.2": "So, Tissa, ist es, ",
+  "sn22.84:4.3": "wenn man nicht frei ist von Begehren nach Form. "
 }
