--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.84:3.12": "„Ja, Herr.“ ",
   "sn22.84:4.1": "„Gut, gut, Tissa! ",
   "sn22.84:4.2": "So, Tissa, ist es, ",
-  "sn22.84:4.3": "wenn man nicht frei ist von Begehren nach Form. "
+  "sn22.84:4.3": "wenn man nicht frei ist von Begehren nach Form. ",
+  "sn22.84:4.4": "Wenn man frei ist von Begehren nach Gefühl … "
 }
