Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.84:4.2": "So, Tissa, ist es, ",
   "sn22.84:4.3": "wenn man nicht frei ist von Begehren nach Form. ",
   "sn22.84:4.4": "Wenn man frei ist von Begehren nach Gefühl … ",
-  "sn22.84:4.5": "nach Wahrnehmung … "
+  "sn22.84:4.5": "nach Wahrnehmung … ",
+  "sn22.84:4.6": "nach Entscheidungen … "
 }
