--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.84:4.3": "wenn man nicht frei ist von Begehren nach Form. ",
   "sn22.84:4.4": "Wenn man nicht frei ist von Begehren nach Gefühl … ",
   "sn22.84:4.5": "nach Wahrnehmung … ",
-  "sn22.84:4.6": "nach Entscheidungen … "
+  "sn22.84:4.6": "nach Entscheidungen … ",
+  "sn22.84:5.3": "oder nach Bewusstsein, und dieses Bewusstsein verfällt und geht zugrunde, führt das zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis?“ "
 }
