Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.84:4.6": "nach Entscheidungen … ",
   "sn22.84:5.3": "oder nach Bewusstsein, und dieses Bewusstsein verfällt und geht zugrunde, führt das zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis?“ ",
   "sn22.84:5.4": "„Ja, Herr.“ ",
-  "sn22.84:6.1": "„Gut, gut, Tissa! "
+  "sn22.84:6.1": "„Gut, gut, Tissa! ",
+  "sn22.84:6.2": "So, Tissa, ist es, "
 }
