--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.84:5.4": "„Ja, Herr.“ ",
   "sn22.84:6.1": "„Gut, gut, Tissa! ",
   "sn22.84:6.2": "So, Tissa, ist es, ",
-  "sn22.84:6.3": "wenn man nicht frei ist von Begehren nach Bewusstsein. "
+  "sn22.84:6.3": "wenn man nicht frei ist von Begehren nach Bewusstsein. ",
+  "sn22.84:6.4": "Was denkst du, Tissa? "
 }
