--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.84:6.5": "Wenn man frei ist von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Form, und diese Form verfällt und geht zugrunde, führt das zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis?“ ",
   "sn22.84:6.6": "„Nein, Herr.“ ",
   "sn22.84:7.1": "„Gut, gut, Tissa! ",
-  "sn22.84:7.2": "So, Tissa, ist es, "
+  "sn22.84:7.2": "So, Tissa, ist es, ",
+  "sn22.84:7.3": "wenn man frei ist von Begehren nach Form. "
 }
