--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "sn22.84:6.6": "„Nein, Herr.“ ",
   "sn22.84:7.1": "„Gut, gut, Tissa! ",
   "sn22.84:7.2": "So, Tissa, ist es, ",
-  "sn22.84:7.3": "wenn man frei ist von Begehren nach Form. ",
+  "sn22.84:7.3": "wenn man frei ist von Begehren nach Form … ",
   "sn22.84:7.4": "Wenn man frei ist von Begehren nach Gefühl … ",
   "sn22.84:7.5": "nach Wahrnehmung … ",
   "sn22.84:7.6": "nach Entscheidungen … "
