Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "sn22.84:7.3": "wenn man frei ist von Begehren nach Form … ",
   "sn22.84:7.4": "nach Gefühl … ",
   "sn22.84:7.5": "nach Wahrnehmung … ",
-  "sn22.84:7.6": "nach Entscheidungen … "
+  "sn22.84:7.6": "nach Entscheidungen … ",
+  "sn22.84:8.3": "und nach Bewusstsein. "
 }
