--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn22.84:7.6": "nach Entscheidungen … ",
   "sn22.84:8.3": "und nach Bewusstsein. ",
   "sn22.84:8.4": "Was denkst du, Tissa? ",
-  "sn22.84:8.5": "Ist Form beständig oder unbeständig?“ "
+  "sn22.84:8.5": "Ist Form beständig oder unbeständig?“ ",
+  "sn22.84:8.6": "„Unbeständig, Herr.“ "
 }
