Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.84:8.4": "Was denkst du, Tissa? ",
   "sn22.84:8.5": "Ist Form beständig oder unbeständig?“ ",
   "sn22.84:8.6": "„Unbeständig, Herr.“ ",
-  "sn22.84:8.7": "„Ist Gefühl …“ … "
+  "sn22.84:8.7": "„Ist Gefühl …“ … ",
+  "sn22.84:8.8": "„Ist Wahrnehmung …“ … "
 }
