--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "sn22.84:8.5": "Ist Form beständig oder unbeständig?“ ",
   "sn22.84:8.6": "„Unbeständig, Herr.“ ",
   "sn22.84:8.7": "„Ist Gefühl …“ … ",
-  "sn22.84:8.8": "„Ist Wahrnehmung …“ … "
+  "sn22.84:8.8": "„Ist Wahrnehmung …“ … ",
+  "sn22.84:8.9": "„Sind Entscheidungen …“ … "
 }
