--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.84:8.6": "„Unbeständig, Herr.“ ",
   "sn22.84:8.7": "„Ist Gefühl …“ … ",
   "sn22.84:8.8": "„Ist Wahrnehmung …“ … ",
-  "sn22.84:8.9": "„Sind Entscheidungen …“ … "
+  "sn22.84:8.9": "„Sind Entscheidungen …“ … ",
+  "sn22.84:8.10": "„Ist Bewusstsein beständig oder unbeständig?“ "
 }
