--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.84:8.9": "„Sind Entscheidungen …“ … ",
   "sn22.84:8.10": "„Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.84:8.11": "„Unbeständig, Herr.“ ",
-  "sn22.84:8.12": "„Daher solltest du jegliche Art … sehen … "
+  "sn22.84:8.12": "„Daher solltest du jegliche Art … sehen … ",
+  "sn22.84:8.13": "Wenn er das sieht … "
 }
