--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.84:8.12": "„Daher solltest du jegliche Art … sehen … ",
   "sn22.84:8.13": "Wenn er das sieht … ",
   "sn22.84:8.14": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
-  "sn22.84:9.1": "Angenommen, Tissa, da wären zwei Menschen: "
+  "sn22.84:9.1": "Angenommen, Tissa, da wären zwei Menschen: ",
+  "sn22.84:9.2": "einer, der auf dem Pfad nicht bewandert wäre, und einer, der  auf dem Pfad bewandert wäre. "
 }
