--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn22.84:8.13": "Wenn er das sieht … ",
   "sn22.84:8.14": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "sn22.84:9.1": "Angenommen, Tissa, da wären zwei Menschen: ",
-  "sn22.84:9.2": "einer, der auf dem Pfad nicht bewandert wäre, und einer, der  auf dem Pfad bewandert wäre. "
+  "sn22.84:9.2": "einer, der auf dem Pfad nicht bewandert wäre, und einer, der  auf dem Pfad bewandert wäre. ",
+  "sn22.84:9.3": "Derjenige, der auf dem Pfad nicht bewandert wäre, würde den befragen, der bewandert wäre, "
 }
