--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn22.84:9.4": "und der würde antworten: ",
   "sn22.84:9.5": "‚Komm, guter Mann, das ist der Pfad. ",
   "sn22.84:9.6": "Folge ihm ein Stück, ",
-  "sn22.84:9.7": "und du wirst eine Weggabelung sehen. Lass den linken Weg liegen und schlag den rechten ein. "
+  "sn22.84:9.7": "und du wirst eine Weggabelung sehen. Lass den linken Weg liegen und schlag den rechten ein. ",
+  "sn22.84:9.8": "Geh ein Stück weiter, "
 }
