--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -57,6 +57,6 @@
   "sn22.84:9.5": "‚Komm, guter Mann, das ist der Pfad. ",
   "sn22.84:9.6": "Gehe ein Stück, ",
   "sn22.84:9.7": "und du wirst eine Weggabelung sehen. Lass den linken Weg liegen und schlag den rechten ein. ",
-  "sn22.84:9.8": "Folge diesem ein Stück, ",
+  "sn22.84:9.8": "Gehe ein Stück weiter, ",
   "sn22.84:9.9": "und du wirst ein dunkles Waldstück sehen. "
 }
