Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "sn22.84:9.7": "und du wirst eine Weggabelung sehen. Lass den linken Weg liegen und schlag den rechten ein. ",
   "sn22.84:9.8": "Geh ein Stück weiter, ",
   "sn22.84:9.9": "und du wirst ein dunkles Waldstück sehen. ",
-  "sn22.84:9.10": "Geh ein Stück weiter, "
+  "sn22.84:9.10": "Geh ein Stück weiter, ",
+  "sn22.84:9.11": "und du wirst eine ausgedehnte Sumpfniederung sehen. "
 }
