Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn22.84:9.9": "und du wirst ein dunkles Waldstück sehen. ",
   "sn22.84:9.10": "Geh ein Stück weiter, ",
   "sn22.84:9.11": "und du wirst eine ausgedehnte Sumpfniederung sehen. ",
-  "sn22.84:9.12": "Geh ein Stück weiter, "
+  "sn22.84:9.12": "Geh ein Stück weiter, ",
+  "sn22.84:9.13": "und du wirst eine tiefe, steile Klippe sehen. "
 }
