--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "sn22.84:9.10": "Geh ein Stück weiter, ",
   "sn22.84:9.11": "und du wirst eine ausgedehnte Sumpfniederung sehen. ",
   "sn22.84:9.12": "Geh ein Stück weiter, ",
-  "sn22.84:9.13": "und du wirst eine tiefe, steile Klippe sehen. "
+  "sn22.84:9.13": "und du wirst eine tiefe, steile Klippe sehen. ",
+  "sn22.84:9.14": "Geh ein Stück weiter, "
 }
