--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "sn22.84:9.13": "und du wirst eine tiefe, steile Klippe sehen. ",
   "sn22.84:9.14": "Geh ein Stück weiter, ",
   "sn22.84:9.15": "und du wirst eine ebene, schön angelegte Landschaft sehen.‘ ",
-  "sn22.84:10.1": "Ich habe mir dieses Gleichnis ausgedacht, um etwas deutlich zu machen. "
+  "sn22.84:10.1": "Ich habe mir dieses Gleichnis ausgedacht, um etwas deutlich zu machen. ",
+  "sn22.84:10.2": "Und das ist die Bedeutung: "
 }
