--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -51,7 +51,7 @@
   "sn22.84:8.13": "Wenn er das sieht … ",
   "sn22.84:8.14": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "sn22.84:9.1": "Angenommen, Tissa, da wären zwei Menschen: ",
-  "sn22.84:9.2": "einer, der auf dem Pfad nicht bewandert wäre, und einer, der  auf dem Pfad bewandert wäre. ",
+  "sn22.84:9.2": "einer, der den Weg nicht kennt, und einer, der  ihn kennt. ",
   "sn22.84:9.3": "Derjenige, der auf dem Pfad nicht bewandert wäre, würde den befragen, der bewandert wäre, ",
   "sn22.84:9.4": "und der würde antworten: ",
   "sn22.84:9.5": "‚Komm, guter Mann, das ist der Pfad. ",
