--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "sn22.84:9.15": "und du wirst eine ebene, schön angelegte Landschaft sehen.‘ ",
   "sn22.84:10.1": "Ich habe mir dieses Gleichnis ausgedacht, um etwas deutlich zu machen. ",
   "sn22.84:10.2": "Und das ist die Bedeutung: ",
-  "sn22.84:10.3": "‚Ein Mensch, der den Weg nicht kennt‘ ist ein Ausdruck für einen ungebildeten gewöhnlichen Menschen. "
+  "sn22.84:10.3": "‚Ein Mensch, der den Weg nicht kennt‘ ist ein Ausdruck für einen ungebildeten gewöhnlichen Menschen. ",
+  "sn22.84:10.4": "‚Ein Mensch, der den Weg kennt‘ ist ein Ausdruck für den Klargewordenen, den Vollendeten, den vollkommen erwachten Buddha. "
 }
