Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "sn22.84:10.3": "‚Ein Mensch, der den Weg nicht kennt‘ ist ein Ausdruck für einen ungebildeten gewöhnlichen Menschen. ",
   "sn22.84:10.4": "‚Ein Mensch, der den Weg kennt‘ ist ein Ausdruck für den Klargewordenen, den Vollendeten, den vollkommen erwachten Buddha. ",
   "sn22.84:10.5": "‚Eine Weggabelung‘ ist ein Ausdruck für Zweifel. ",
-  "sn22.84:10.6": "‚Der linke Weg‘ ist ein Ausdruck für den falschen achtfachen Pfad: nämlich "
+  "sn22.84:10.6": "‚Der linke Weg‘ ist ein Ausdruck für den falschen achtfachen Pfad: nämlich ",
+  "sn22.84:10.7": "falsche Ansicht … falsche Versenkung. "
 }
