Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -73,5 +73,6 @@
   "sn22.84:10.6": "‚Der linke Weg‘ ist ein Ausdruck für den falschen achtfachen Pfad: nämlich ",
   "sn22.84:10.7": "falsche Ansicht … falsche Versenkung. ",
   "sn22.84:10.8": "‚Der rechte Weg‘ ist ein Ausdruck für den edlen achtfachen Pfad: nämlich ",
-  "sn22.84:10.9": "rechte Ansicht … rechte Versenkung. "
+  "sn22.84:10.9": "rechte Ansicht … rechte Versenkung. ",
+  "sn22.84:10.10": "‚Ein dunkles Waldstück‘ ist ein Ausdruck für Unwissenheit. "
 }
