--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -76,5 +76,6 @@
   "sn22.84:10.9": "rechte Ansicht … rechte Versenkung. ",
   "sn22.84:10.10": "‚Ein dunkles Waldstück‘ ist ein Ausdruck für Unwissenheit. ",
   "sn22.84:10.11": "‚Eine ausgedehnte Sumpfniederung‘ ist ein Ausdruck für Sinnenfreuden. ",
-  "sn22.84:10.12": "‚Ein tiefer, steiler Abgrund‘ ist ein Ausdruck für Zorn und Bedrängnis. "
+  "sn22.84:10.12": "‚Ein tiefer, steiler Abgrund‘ ist ein Ausdruck für Zorn und Bedrängnis. ",
+  "sn22.84:10.13": "‚Eine ebene, schön angelegte Landschaft‘ ist ein Ausdruck für das Erlöschen. "
 }
