--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "sn22.84:10.12": "‚Ein tiefer, steiler Abgrund‘ ist ein Ausdruck für Zorn und Bedrängnis. ",
   "sn22.84:10.13": "‚Eine ebene, schön angelegte Landschaft‘ ist ein Ausdruck für das Erlöschen. ",
   "sn22.84:10.14": "„Freue dich, Tissa, freue dich! ",
-  "sn22.84:10.15": "Ich bin hier, um euch zu unterweisen, euch zu helfen und euch zu lehren.“ "
+  "sn22.84:10.15": "Ich bin hier, um euch zu unterweisen, euch zu helfen und euch zu lehren.“ ",
+  "sn22.84:11.1": "Das sagte der Buddha. "
 }
