--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1199,7 +1199,7 @@
   "pli-tv-kd13:27.1.4": "“It may be, monks, that a monk on probation disrobes. ",
   "pli-tv-kd13:27.1.5": "For one who’s disrobed, the probation is suspended. ",
   "pli-tv-kd13:27.1.6": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.7": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.7": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.8": "It may be that a monk on probation becomes a novice monk. ",
   "pli-tv-kd13:27.1.9": "For a novice monk, the probation is suspended. ",
   "pli-tv-kd13:27.1.10": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
