--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1203,7 +1203,7 @@
   "pli-tv-kd13:27.1.8": "It may be that a monk on probation becomes a novice monk. ",
   "pli-tv-kd13:27.1.9": "For a novice monk, the probation is suspended. ",
   "pli-tv-kd13:27.1.10": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.11": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.11": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.12": "It may be that a monk on probation goes insane. ",
   "pli-tv-kd13:27.1.13": "For one who’s insane, the probation is suspended. ",
   "pli-tv-kd13:27.1.14": "If he regains his sanity, he continues the previous probationary process right away. ",
