Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1207,13 +1207,13 @@
   "pli-tv-kd13:27.1.12": "It may be that a monk on probation goes insane. ",
   "pli-tv-kd13:27.1.13": "For one who’s insane, the probation is suspended. ",
   "pli-tv-kd13:27.1.14": "If he regains his sanity, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.15": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.15": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.16": "It may be that a monk on probation becomes deranged. ",
-  "pli-tv-kd13:27.1.17": "For one who is deranged, the probation is suspended. ",
+  "pli-tv-kd13:27.1.17": "For one who’s deranged, the probation is suspended. ",
   "pli-tv-kd13:27.1.18": "If he regains his sanity, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.19": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.19": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.20": "It may be that a monk on probation is overwhelmed by pain. ",
-  "pli-tv-kd13:27.1.21": "For one who is overwhelmed by pain, the probation is suspended. ",
+  "pli-tv-kd13:27.1.21": "For one who’s overwhelmed by pain, the probation is suspended. ",
   "pli-tv-kd13:27.1.22": "If he recovers, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.1.23": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.24": "It may be that a monk on probation is ejected for not recognizing an offense. ",
