--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1215,7 +1215,7 @@
   "pli-tv-kd13:27.1.20": "It may be that a monk on probation is overwhelmed by pain. ",
   "pli-tv-kd13:27.1.21": "For one who’s overwhelmed by pain, the probation is suspended. ",
   "pli-tv-kd13:27.1.22": "If he recovers, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.23": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.23": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.24": "It may be that a monk on probation is ejected for not recognizing an offense. ",
   "pli-tv-kd13:27.1.25": "For one who is ejected, the probation is suspended. ",
   "pli-tv-kd13:27.1.26": "If he’s re-admitted, he continues the previous probationary process right away. ",
