--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1217,13 +1217,13 @@
   "pli-tv-kd13:27.1.22": "If he recovers, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.1.23": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.24": "It may be that a monk on probation is ejected for not recognizing an offense. ",
-  "pli-tv-kd13:27.1.25": "For one who is ejected, the probation is suspended. ",
+  "pli-tv-kd13:27.1.25": "For one who’s ejected, the probation is suspended. ",
   "pli-tv-kd13:27.1.26": "If he’s re-admitted, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.27": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.27": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.28": "It may be that a monk on probation is ejected for not making amends for an offense. ",
-  "pli-tv-kd13:27.1.29": "For one who is ejected, the probation is suspended. ",
+  "pli-tv-kd13:27.1.29": "For one who’s ejected, the probation is suspended. ",
   "pli-tv-kd13:27.1.30": "If he’s re-admitted, he continues the previous probationary process right away. ",
-  "pli-tv-kd13:27.1.31": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
+  "pli-tv-kd13:27.1.31": "The probation that was given is valid. The probation he’s already undertaken is valid. And the remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.32": "It may be that a monk on probation is ejected for not giving up a bad view. ",
   "pli-tv-kd13:27.1.33": "For one who is ejected, the probation is suspended. ",
   "pli-tv-kd13:27.1.34": "If he’s re-admitted, he continues the previous probationary process right away. ",
