Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1243,7 +1243,7 @@
   "pli-tv-kd13:27.2.13": "For one who’s ejected, the sending back to the beginning is suspended. ",
   "pli-tv-kd13:27.2.14": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.2.15": "The probation that was given is valid. The probation he’s already undertaken is valid. ",
-  "pli-tv-kd13:27.2.16": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:27.2.16": "And he’s to be sent back to the beginning. ",
   "pli-tv-kd13:27.3.1": "“It may be that a monk deserving the trial period of six days disrobes. ",
   "pli-tv-kd13:27.3.2": "For one who’s disrobed, the giving of the trial period is suspended. ",
   "pli-tv-kd13:27.3.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
