--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1248,7 +1248,7 @@
   "pli-tv-kd13:27.3.2": "For one who’s disrobed, the giving of the trial period is suspended. ",
   "pli-tv-kd13:27.3.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.3.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
-  "pli-tv-kd13:27.3.5": "That monk is to be given the trial period. ",
+  "pli-tv-kd13:27.3.5": "And he’s to be given the trial period. ",
   "pli-tv-kd13:27.3.6": "It may be that a monk deserving the trial period of six days becomes a novice monk, ",
   "pli-tv-kd13:27.3.7": "goes insane, ",
   "pli-tv-kd13:27.3.8": "becomes deranged, ",
