Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1256,7 +1256,7 @@
   "pli-tv-kd13:27.3.10": "is ejected for not recognizing an offense, ",
   "pli-tv-kd13:27.3.11": "is ejected for not making amends for an offense, ",
   "pli-tv-kd13:27.3.12": "or is ejected for not giving up a bad view. ",
-  "pli-tv-kd13:27.3.13": "For any of these, the giving of the trial period is suspended. ",
+  "pli-tv-kd13:27.3.13": "For one who’s ejected, the giving of the trial period is suspended. ",
   "pli-tv-kd13:27.3.14": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.3.15": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.3.16": "That monk is to be given the trial period. ",
