Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1281,7 +1281,7 @@
   "pli-tv-kd13:27.5.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.5.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.5": "The trial period of six days that was given is valid. The trial period he’s undertaken is valid. ",
-  "pli-tv-kd13:27.5.6": "That monk is to be rehabilitated. ",
+  "pli-tv-kd13:27.5.6": "And he’s to be rehabilitated. ",
   "pli-tv-kd13:27.5.7": "It may be that a monk deserving rehabilitation becomes a novice monk, ",
   "pli-tv-kd13:27.5.8": "goes insane, ",
   "pli-tv-kd13:27.5.9": "becomes deranged, ",
