Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1293,7 +1293,7 @@
   "pli-tv-kd13:27.5.15": "If he’s re-admitted, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.5.16": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.17": "The trial period of six days that was given is valid. The trial period he’s undertaken is valid. ",
-  "pli-tv-kd13:27.5.18": "That monk is to be rehabilitated.” ",
+  "pli-tv-kd13:27.5.18": "And he’s to be rehabilitated.” ",
   "pli-tv-kd13:27.5.19": "The group of forty is finished. ",
   "pli-tv-kd13:28.1.0": "4. The group of thirty-six ",
   "pli-tv-kd13:28.1.1": "“It may be that a monk on probation commits a number of offenses entailing suspension—specified and unconcealed. ",
