--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1296,7 +1296,7 @@
   "pli-tv-kd13:27.5.18": "And he’s to be rehabilitated.” ",
   "pli-tv-kd13:27.5.19": "The group of forty is finished. ",
   "pli-tv-kd13:28.1.0": "4. The group of thirty-six ",
-  "pli-tv-kd13:28.1.1": "“It may be that a monk on probation commits a number of offenses entailing suspension—specified and unconcealed. ",
+  "pli-tv-kd13:28.1.1": "“It may be that a monk on probation commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:28.1.2": "That monk is to be sent back to the beginning. ",
   "pli-tv-kd13:28.1.3": "It may be that a monk on probation commits a number of offenses entailing suspension—specified and concealed. ",
   "pli-tv-kd13:28.1.4": "That monk is to be sent back to the beginning. ",
