--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1299,7 +1299,7 @@
   "pli-tv-kd13:28.1.1": "“It may be that a monk on probation commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:28.1.2": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:28.1.3": "It may be that a monk on probation commits a number of offenses entailing suspension, concealed and specified. ",
-  "pli-tv-kd13:28.1.4": "That monk is to be sent back to the beginning. ",
+  "pli-tv-kd13:28.1.4": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:28.1.5": "He should then be given probation according to the length of the concealment of the offenses and simultaneously with the probation for the previous offense. ",
   "pli-tv-kd13:28.1.6": "It may be that a monk on probation commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
   "pli-tv-kd13:28.1.7": "That monk is to be sent back to the beginning. ",
