Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1313,8 +1313,8 @@
   "pli-tv-kd13:28.1.15": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:28.1.16": "He should then be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offense. ",
   "pli-tv-kd13:28.2.1": "It may be that a monk who deserves the trial period of six days … ",
-  "pli-tv-kd13:28.2.2": "who is undertaking the trial period of six days … ",
-  "pli-tv-kd13:28.2.3": "(To be expanded as for probation.) ",
+  "pli-tv-kd13:28.2.2": "who’s undertaking the trial period of six days … ",
+  "pli-tv-kd13:28.2.3": "(to be expanded as for probation) … ",
   "pli-tv-kd13:28.2.4": "who deserves rehabilitation commits a number of offenses entailing suspension—specified and unconcealed … ",
   "pli-tv-kd13:28.2.5": "specified and concealed … ",
   "pli-tv-kd13:28.2.6": "specified and both concealed and unconcealed … ",
