Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1316,9 +1316,9 @@
   "pli-tv-kd13:28.2.2": "who’s undertaking the trial period of six days … ",
   "pli-tv-kd13:28.2.3": "(to be expanded as for probation) … ",
   "pli-tv-kd13:28.2.4": "who deserves rehabilitation commits a number of offenses entailing suspension, unconcealed and specified … ",
-  "pli-tv-kd13:28.2.5": "specified and concealed … ",
-  "pli-tv-kd13:28.2.6": "specified and both concealed and unconcealed … ",
-  "pli-tv-kd13:28.2.7": "unspecified and unconcealed … ",
+  "pli-tv-kd13:28.2.5": "concealed and specified … ",
+  "pli-tv-kd13:28.2.6": "both concealed and unconcealed and specified … ",
+  "pli-tv-kd13:28.2.7": "unconcealed and unspecified … ",
   "pli-tv-kd13:28.2.8": "unspecified and concealed … ",
   "pli-tv-kd13:28.2.9": "unspecified and both concealed and unconcealed … ",
   "pli-tv-kd13:28.2.10": "unconcealed and both specified and unspecified … ",
