Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1320,7 +1320,7 @@
   "pli-tv-kd13:28.2.6": "both concealed and unconcealed and specified … ",
   "pli-tv-kd13:28.2.7": "unconcealed and unspecified … ",
   "pli-tv-kd13:28.2.8": "concealed and unspecified … ",
-  "pli-tv-kd13:28.2.9": "unspecified and both concealed and unconcealed … ",
+  "pli-tv-kd13:28.2.9": "both concealed and unconcealed and unspecified … ",
   "pli-tv-kd13:28.2.10": "unconcealed and both specified and unspecified … ",
   "pli-tv-kd13:28.2.11": "concealed and both specified and unspecified … ",
   "pli-tv-kd13:28.2.12": "both concealed and unconcealed and both specified and unspecified. ",
