Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1327,9 +1327,9 @@
   "pli-tv-kd13:28.2.13": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:28.2.14": "He should then be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offense.” ",
   "pli-tv-kd13:28.2.15": "The group of thirty-six is finished. ",
-  "pli-tv-kd13:29.1.0": "5. The group of one hundred on the trial period of six days ",
+  "pli-tv-kd13:29.1.0": "5. The group of one hundred on the trial period ",
   "pli-tv-kd13:29.1.1": "“It may be that a monk commits a number of unconcealed offenses entailing suspension and then disrobes. ",
-  "pli-tv-kd13:29.1.2": "Being re-ordained, he doesn’t conceal those offenses. ",
+  "pli-tv-kd13:29.1.2": "Being re-ordained, he doesn’t conceal them. ",
   "pli-tv-kd13:29.1.3": "That monk should be given the trial period of six days. ",
   "pli-tv-kd13:29.1.4": "It may be that a monk commits a number of unconcealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:29.1.5": "Being re-ordained, he conceals those offenses. ",
