Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1396,16 +1396,16 @@
   "pli-tv-kd13:29.4.11": "but not those he doesn’t remember. ",
   "pli-tv-kd13:29.4.12": "He then disrobes. Being re-ordained and having remembered all of them, he doesn’t conceal those offenses he previously remembered, ",
   "pli-tv-kd13:29.4.13": "but he conceals those he didn’t remember. ",
-  "pli-tv-kd13:29.4.14": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.4.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.4.15": "It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.4.16": "He remembers some of the offenses, but not others. ",
+  "pli-tv-kd13:29.4.16": "He remembers some of them, but not others. ",
   "pli-tv-kd13:29.4.17": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:29.4.18": "but not those he doesn’t remember. ",
-  "pli-tv-kd13:29.4.19": "He then disrobes. Being re-ordained and having remembered all the offenses, he conceals those offenses he previously remembered, ",
+  "pli-tv-kd13:29.4.19": "He then disrobes. Being re-ordained and having remembered all of them, he conceals those offenses he previously remembered, ",
   "pli-tv-kd13:29.4.20": "but not those he didn’t remember. ",
-  "pli-tv-kd13:29.4.21": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.4.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.4.22": "It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.4.23": "He remembers some of the offenses, but not others. ",
+  "pli-tv-kd13:29.4.23": "He remembers some of them, but not others. ",
   "pli-tv-kd13:29.4.24": "He conceals the offenses he remembers, ",
   "pli-tv-kd13:29.4.25": "but not those he doesn’t remember. ",
   "pli-tv-kd13:29.4.26": "He then disrobes. Being re-ordained and having remembered all the offenses, he conceals all of them. ",
